--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Responsive Web</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />         
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>         
 </head>
 <body>
     <header class="header">
@@ -142,18 +142,18 @@
     <footer>
         <section>
             <section>
-                <h1>Contact me</h1>
-                <p>
+                <h1 class="footerHeader">Contact me</h1>
+                <p class="footerPar">
                     Please get in touch if you think our work could be mutually beneficial!!
                 </p>
                 
                 <span>1234 random road</span>
-                <p>
+                <p class="footerPar">
                     Random Town, California 1234
                 </p>
 
-                <div>
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>phone-outline</title><path d="M20,15.5C18.8,15.5 17.5,15.3 16.4,14.9C16.3,14.9 16.2,14.9 16.1,14.9C15.8,14.9 15.6,15 15.4,15.2L13.2,17.4C10.4,15.9 8,13.6 6.6,10.8L8.8,8.6C9.1,8.3 9.2,7.9 9,7.6C8.7,6.5 8.5,5.2 8.5,4C8.5,3.5 8,3 7.5,3H4C3.5,3 3,3.5 3,4C3,13.4 10.6,21 20,21C20.5,21 21,20.5 21,20V16.5C21,16 20.5,15.5 20,15.5M5,5H6.5C6.6,5.9 6.8,6.8 7,7.6L5.8,8.8C5.4,7.6 5.1,6.3 5,5M19,19C17.7,18.9 16.4,18.6 15.2,18.2L16.4,17C17.2,17.2 18.1,17.4 19,17.4V19Z" /></svg>
+                <div class="contactDiv">
+                    <i class="fa-light fa-phone-volume"></i>
                     <span>5555-5555-5555</span>
                 </div>
                 <div>
@@ -161,14 +161,14 @@
                     <span>dkayemaildoesnotexist@gmail.com</span>
                 </div>
 
-                <div>
+                <div class="footerIcon">
                     <i class="devicon-github-original"></i>
                     <i class="devicon-linkedin-plain"></i>
                     <i class="devicon-twitter-original"></i>    
                 </div>
             </section>
-            <section>
-                <img src="images/img2.jpg" alt="Random image of me being goofy">
+            <section class="imageOneContainer andTwo">
+                <img class="imgTwo" src="images/img2.jpg" alt="Random image of me being goofy">
             </section>
         </section>
     </footer>
